--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -1,32 +1,35 @@
 name: tfsec
-
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - master
   pull_request:
-  schedule:
-    - cron: '15 19 * * 6'
 
 jobs:
   tfsec:
-    name: Run tfsec sarif report
+    name: tfsec sarif report
     runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
 
     steps:
       - name: Clone repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@master
 
-      - name: Run tfsec
-        uses: aquasecurity/tfsec-sarif-action@21ded20e8ca120cd9d3d6ab04ef746477542a608
+      - name: tfsec
+        uses: aquasecurity/tfsec-sarif-action@v0.1.4
         with:
           sarif_file: tfsec.sarif
+          full_repo_scan: true
 
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v3
+      - name: tfsec commenter for PR
+        uses: tfsec/tfsec-pr-commenter-action@v1.3.1
         with:
-          # Path to SARIF file relative to the root of the repository
-          sarif_file: tfsec.sarif
+          GITHUB_TOKEN: ${{ github.token }}
+
+      - name: Terraform security scan Advanced
+        uses: triat/terraform-security-scan@v3.1.0
+        if: github.event_name == 'pull_request'
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+          tfsec_actions_comment: true
+          tfsec_output_format: sarif
+        continue-on-error: true
